# uu-mpsv-gcl-verifier

./: .gitattributes  README.md  cabal.project  gcl-verifier.cabal  gcl.cabal  install-vscode-ext.sh  uninstall-vscode-ext.sh
bench/: divByN.gcl  memberOf.gcl  min.gcl  pullUp.gcl
examples/: E.gcl  a.gcl  assign.gcl  bubbleSort.gcl  code.gcl  divByN.gcl  divByNBug.gcl  e.gcl  memberOf.gcl  min.gcl  minIndex.gcl  minIndexExists.gcl  minimal.gcl  pointers.gcl  pointers2.gcl  pointersComplex.gcl  refMin.gcl  reverse.gcl  shadowEscape.gcl  simpleArray.gcl  simpleWhile.gcl  swap.gcl  whileLet.gcl
gcl-vscode/: CHANGELOG.md  README.md  package.json
gcl-vscode/syntaxes/: gcl.tmLanguage.json
presentation/: Slides.html  Slides.md  watch.sh
src/: Main.hs
src/Language/GCL/: Eval.hs  InitChecking.hs  Opts.hs  Parser.hs  PrettyPrint.hs  Syntax.hs  TypeChecking.hs  Utils.hs  Verification.hs  Verify.hs
src/Language/GCL/Syntax/: Helpers.hs  Mutation.hs  Preprocess.hs
src/Language/GCL/Verification/: Helpers.hs  Linearization.hs  Preprocessing.hs  Simplification.hs  WLP.hs  Wlp.hs  Z3.hs
src/Verifier/: Evaluator.hs
tests/: E.gcl  E.out  divByN.gcl  incorrect1.gcl  incorrect1.out  memberOf.gcl  shadow.gcl  shadow.out  simpleArray.gcl  simpleArray.out
