cabal-version: 3.6

name: gcl
version: 0.0.0.0
synopsis: Implementation of the Guarded Command Language
description: Please see the README on GitHub at <https://github.com/aionescu/gcl#readme>
homepage: https://github.com/aionescu/gcl#readme
bug-reports: https://github.com/aionescu/gcl/issues
license: GPL-3.0-only
license-file: LICENSE.txt
maintainer: alxi.2001@gmail.com
copyright: Copyright (C) 2022 Alex Ionescu
category: Compilers/Interpreters, Language
build-type: Simple
extra-source-files: README.md

executable gcl
  hs-source-dirs: src
  main-is: Main.hs

  other-modules:
    Language.GCL.Eval
    Language.GCL.Parser
    Language.GCL.Syntax
    Language.GCL.Syntax.Helpers
    Language.GCL.TypeChecking
    Language.GCL.Utils
    Language.GCL.Verification
    Language.GCL.Verification.Preprocessing
    Language.GCL.Verification.Simplification
    Language.GCL.Verification.Wlp

  build-depends:
    base >=4.15 && <5
    , containers ^>= 0.6.4
    , data-fix ^>= 0.3.2
    , megaparsec ^>= 9.2
    , mtl ^>= 2.3
    , parser-combinators ^>= 1.3
    , recursion-schemes ^>= 5.2.2.2
    , monadic-recursion-schemes ^>= 0.1.13.1
    , text ^>= 2
    , vector ^>= 0.13

  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wno-name-shadowing
    -Wno-unticked-promoted-constructors
    -Wredundant-constraints
    -Wunused-packages

  default-language: Haskell2010

  default-extensions:
    -- GHC2021
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

    ApplicativeDo
    BlockArguments
    DataKinds
    DefaultSignatures
    DeriveAnyClass
    DerivingStrategies
    DerivingVia
    DuplicateRecordFields
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    LexicalNegation
    MagicHash
    MultiWayIf
    NegativeLiterals
    NoMonomorphismRestriction
    NoStarIsType
    OverloadedStrings
    PartialTypeSignatures
    PatternSynonyms
    QuantifiedConstraints
    RecordWildCards
    RecursiveDo
    TypeFamilies
    TypeFamilyDependencies
    UnboxedTuples
    UndecidableInstances
    ViewPatterns
